<resources>
    <string name="app_name">GuideFlix</string>
    <string name="Bem_vindo"> Bem vindo!</string>
    <string name="Series"> Seu gerenciador de filmes e séries.</string>
    <string name="escolha"> Escolha uma opção</string>

    <string name="Login_botao"> Fazer Login</string>
    <string name="Cadastro_botao">Cadastrar-se</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_button_entrar">ENTRAR</string>
    <string name="txt_cadastro_login">Não possui conta?</string>
    <string name="email_exemplo">email@email.com</string>
    <string name="senha_exemplo">*********</string>

    <string name="login_cadastro">Já possui conta?</string>
    <string name="txt_Button_LoginCadastro">Cadastre-se</string>
    <string name="username">Nome de Usuário</string>
    <string name="username_exemplo">User123</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>

    <string name="menu_bottom_bar_lancamentos">Lançamentos</string>
    <string name="menu_bottom_bar_filmes">Filmes</string>
    <string name="menu_bottom_bar_series">Séries</string>
    <string name="menu_bottom_bar_descobrir">Descobrir</string>
    <string name="menu_bottom_bar_perfil">Perfil</string>
    <string name="title_activity_app">AppActivity</string>


    <string name="series_hint">Principais séries</string>
    <string name="destaques_hint">Destaques</string>
    <string name="filmes_hint">Principais Filmes</string>
    <string name="outros">Veja mais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>