<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_lancamentos"
        android:icon="@drawable/ic_calendar_line"
        android:title="@string/menu_bottom_bar_descobrir" />

    <item
        android:id="@+id/navigation_filmes"
        android:icon="@drawable/ic_film_line"
        android:title="@string/menu_bottom_bar_filmes" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_tv_line"
        android:title="@string/menu_bottom_bar_series" />

    <item
        android:id="@+id/navigation_descobrir"
        android:icon="@drawable/ic_search_line"
        android:title="@string/menu_bottom_bar_descobrir" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/icon_person"
        android:title="@string/menu_bottom_bar_perfil" />
</menu>