<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/gray"
    tools:context=".ui.fragmentos.autenticacao.CadastroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/container_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/app_image"
            app:layout_constraintTop_toTopOf="@id/appBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/appBarLayout"/>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/cadastroToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:fontFamily="serif"/>

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/txtcadastromain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:textColor="@color/white_gray"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nametxtCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white_gray"
            android:textSize="20sp"
            android:fontFamily="serif"
            app:layout_constraintTop_toBottomOf="@id/txtcadastromain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputLayoutNomeCadastro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/backgroundedittext"
            android:drawableEnd="@drawable/icon_person"
            android:hint="@string/username_exemplo"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/nametxtCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/emailtxtCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white_gray"
            android:textSize="20sp"
            android:fontFamily="serif"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutNomeCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputLayoutEmailCadastro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundedittext"
            android:drawableEnd="@drawable/icon_email"
            android:hint="@string/email_exemplo"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/emailtxtCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/senhatxtlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_senha"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white_gray"
            android:textSize="20sp"
            android:fontFamily="serif"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmailCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/backgroundedittext"
            android:hint="@string/senha_exemplo"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/icon_eye"
            app:layout_constraintTop_toBottomOf="@id/senhatxtlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/background_button_enabled"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Cadastro_botao"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editSenhaCadastro"
            app:backgroundTint="@null"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/white"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btCadastrar" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>